[package]
name = "video2svg"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visioncortex = "0.1.0"
image = "0.23.10"
clap = "3.0.0-beta.2"
rayon = "1.5.0"
